# ChangeLog for net-libs/libnetfilter_conntrack
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_conntrack/ChangeLog,v 1.16 2008/03/22 19:32:41 opfer Exp $

  22 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  libnetfilter_conntrack-0.0.89.ebuild:
  stable x86, bug 214072

*libnetfilter_conntrack-0.0.89 (08 Mar 2008)

  08 Mar 2008; Cédric Krier <cedk@gentoo.org>
  +libnetfilter_conntrack-0.0.89.ebuild:
  Version bump

*libnetfilter_conntrack-0.0.82 (18 Nov 2007)

  18 Nov 2007; Cédric Krier <cedk@gentoo.org>
  +libnetfilter_conntrack-0.0.82.ebuild:
  Version bump

  08 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libnetfilter_conntrack-0.0.80.ebuild:
  Stable on sparc

*libnetfilter_conntrack-0.0.81 (29 Jul 2007)

  29 Jul 2007; Cédric Krier <cedk@gentoo.org>
  +libnetfilter_conntrack-0.0.81.ebuild:
  Version bump

*libnetfilter_conntrack-0.0.80 (01 Jul 2007)

  01 Jul 2007; Cédric Krier <cedk@gentoo.org>
  +libnetfilter_conntrack-0.0.80.ebuild:
  Version bump

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  libnetfilter_conntrack-0.0.75.ebuild:
  Added ~ppc, bug #176568

*libnetfilter_conntrack-0.0.75 (16 Jun 2007)

  16 Jun 2007; Cédric Krier <cedk@gentoo.org>
  +libnetfilter_conntrack-0.0.75.ebuild:
  Version bump

  21 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libnetfilter_conntrack-0.0.50.ebuild:
  Keyworded ~sparc wrt #176568

  16 May 2007; Jeroen Roovers <jer@gentoo.org>
  libnetfilter_conntrack-0.0.50.ebuild:
  Marked ~hppa (bug #176568).

  18 Apr 2007; Markus Ullmann <jokey@gentoo.org>
  -libnetfilter_conntrack-0.0.31.ebuild,
  libnetfilter_conntrack-0.0.50.ebuild:
  Use eclass function for check and error message ;) and we're stable on x86 now

  17 Apr 2007; Cedric Krier <cedk@gentoo.org>
  libnetfilter_conntrack-0.0.50.ebuild:
  Better fix for bug #165891

  15 Apr 2007; Daniel Black <dragonheart@gentoo.org>