@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/libnfnetlink
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.17 2008/03/22 19:31:17 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfnetlink/ChangeLog,v 1.18 2008/04/08 13:48:24 armin76 Exp $
+
+  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> libnfnetlink-0.0.33.ebuild:
+  sparc stable wrt #214072
 
   22 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
   libnfnetlink-0.0.33.ebuild:
